Added Bootstrap Mainpage and registering

--- a/DatingWebsite-SPA/src/app/app.component.html
+++ b/DatingWebsite-SPA/src/app/app.component.html
@@ -7,14 +7,10 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<div>
-<h1>
-    Dating App
-</h1>
-<app-value>
-  
-</app-value>
-</div>
+<app-Nav></app-Nav>
+<app-home></app-home> 
+
+
 
 
 
