--- a/DatingWebsite-SPA/src/app/app.component.html
+++ b/DatingWebsite-SPA/src/app/app.component.html
@@ -8,7 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-Nav></app-Nav>
-<app-home></app-home> 
+<router-outlet></router-outlet>
 
 
 
